Disallow wrapping text in the top menu, fixes #51

--- a/src/sass/components/_top.scss
+++ b/src/sass/components/_top.scss
@@ -96,6 +96,7 @@
     margin: 0 .5em 0 0;
     padding: 0;
     list-style-type: none;
+    white-space: nowrap;
   }
 
   a {
